[tool.poetry]
name = "PDF-QnA"
version = "0.1.0"
description = ""
authors = ["u.mitskevich"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.10"
streamlit = "^1.20.0"
py-pdf-parser = "^0.10.2"
PyPDF2 = "^3.0.1"
fitz = "^0.0.1-alpha.2"
tiktoken = "^0.3.2"
matplotlib = "^3.7.1"
plotly = "^5.13.1"
sklearn = "^0.0.post2"
scikit-learn = "^1.2.2"

[tool.poetry.dev-dependencies]
openai = "streamlit"
numpy = "^1.24.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
